<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Insomnia</string>
    <string name="tab_name_0">Insomnia</string>
    <string name="tab_name_1">Chat</string>
    <string name="tab_name_2">Count Sheep</string>
    <string name="music">Music</string>
    <string name="sleep_image">Image</string>
    <string name="sleep_music">Music</string>
    <string name="sleep_nature">natural</string>
    <string name="see_more">See more</string>
    <string name="log_in">Sign in</string>
    <string name="sign_up">register</string>
    <string name="forgot_your_password">Forget the password</string>
    <string name="password">Password</string>
    <string name="email_address">mailbox</string>
    <string name="invalid_email">Invalid mailbox</string>
    <string name="wish_list">Collector</string>
    <string name="feed_back">Feedback</string>
    <string name="about_us">About us</string>
    <string name="time_down">Timing off</string>
    <string name="settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="user_email">mailbox</string>
    <string name="login_pwd">Login password</string>
    <string name="man">male</string>
    <string name="woman">female</string>
    <string name="edit_user_info">Editorial Profile</string>
    <string name="please_input_email">Please enter your mailbox</string>
    <string name="please_input_pwd">Please input a password</string>
    <string name="no_bind_email">Unbound mailbox</string>
    <string name="get_like">Point Praise of Harvest</string>
    <string name="to_sign_up">Go to Registration Binding</string>
    <string name="bind_visitor_info">Binding Tourist Information</string>
    <string name="developing">Functional development</string>
    <string name="want_to_login">Have an account, go to login</string>
    <string name="count_now">Timing in progress</string>
    <string name="start_count_down">Start Timing</string>
    <string name="cancel_count_down">Cancel Timing</string>
    <string name="feed_back_hint">Please enter your suggestion.</string>
    <string name="submit">Submission</string>
    <string name="post_detail">post details.</string>
    <string name="start">start</string>
    <string name="play_478">4–7–8 breathing method</string>
    <string name="stop">Stop it</string>
    <string name="age">Age</string>
    <string name="desc">Explain</string>
    <string name="image_list">Picture List</string>
    <string name="exit_again">Press the exit procedure again</string>
    <string name="music_list">Music List</string>
    <string name="syn_info_fail">Synchronization information failure</string>
    <string name="what_you_think">What\'s your opinion?</string>
    <string name="can_not_empty_content">Content cannot be empty</string>
    <string name="display_image">Browse Image</string>
    <string name="save_to">Save to</string>
    <string name="reply">Reply</string>
    <string name="only_for_debug">For debug mode only</string>
    <string name="music_play_error">Abnormal playback</string>
    <string name="playing">Playing</string>
    <string name="exit_after_second">Close after application %1$s</string>
    <string name="send">Send out</string>
    <string name="comment">comment</string>
    <string name="empty_comment">No comment</string>
    <string name="music_colon">Song:</string>
    <string name="next_play">Next play</string>
    <string name="add_wish">Join the Collection</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="start_play_478">Click Start Experience 4–7–8 Sleeping Method</string>
    <string name="has_reply">Reply</string>
    <string name="upload_fail">Upload failed, click Retry</string>
    <string name="add_play_list">Join the playlist</string>
    <string name="play_list">Playlist</string>
    <string name="clear_all">empty</string>
    <string name="share_image_title">I found an interesting picture on Insomnia App.</string>
    <string name="share_music_title">I found a beautiful piece of music on Insomnia App</string>
    <string name="has_run_day">Insomnia has been with you for %1$d for the night.</string>
    <string name="count_result_text">You counted %1$s sheep\nspend %2$s seconds \naverage %3$s seconds per sheep.</string>
    <string name="mouth_ago">months ago</string>
    <string name="day_ago">days ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="now_ago">just</string>
    <string name="playing_mode">Play order</string>
    <string name="select_play_mode">Choose Play Order</string>
    <string name="select_language">Choosing Language</string>
    <string name="mode_single_loop">Single tune circulation</string>
    <string name="mode_random">random</string>
    <string name="mode_loop">List loops</string>
    <string name="exist_play_list">Existing play list</string>

    <string name="collect_list">Collection List</string>
    <string name="send_a_post">Come up with an idea</string>
    <string name="count_sleep">Counting Sheep</string>
    <string name="breath_step_1">Inspiratory 4S</string>
    <string name="breath_step_2">Hold your breath for 7 seconds</string>
    <string name="breath_step_3">Exhale 8s</string>
    <string name="please_input_content">Please enter the content</string>
    <string name="image_no_upload">Pictures not uploaded</string>
    <string name="i_think">I think</string>
    <string name="say_something">Say something</string>

    <string name="rain_1">rain_1</string>
    <string name="rain_2">rain_1</string>
    <string name="rain_3">rain_1</string>
    <string name="rain_4">rain_1</string>
    <string name="rain_5">rain_1</string>
    <string name="rain_6">rain_1</string>
    <string name="rain_7">rain_1</string>
    <string name="rain_8">rain_1</string>
    <string name="rain_9">rain_1</string>

    <string name="city_1">city_1</string>
    <string name="city_2">city_1</string>
    <string name="city_3">city_1</string>
    <string name="city_4">city_1</string>
    <string name="city_5">city_1</string>
    <string name="city_6">city_1</string>
    <string name="city_7">city_1</string>
    <string name="city_8">city_1</string>
    <string name="city_9">city_1</string>

    <string name="forest_1">forest_1</string>
    <string name="forest_2">forest_1</string>
    <string name="forest_3">forest_1</string>
    <string name="forest_4">forest_1</string>
    <string name="forest_5">forest_1</string>
    <string name="forest_6">forest_1</string>
    <string name="forest_7">forest_1</string>
    <string name="forest_8">forest_1</string>
    <string name="forest_9">forest_1</string>

    <string name="meditation_1">meditation_1</string>
    <string name="meditation_2">meditation_1</string>
    <string name="meditation_3">meditation_1</string>
    <string name="meditation_4">meditation_1</string>
    <string name="meditation_5">meditation_1</string>
    <string name="meditation_6">meditation_1</string>
    <string name="meditation_7">meditation_1</string>
    <string name="meditation_8">meditation_1</string>
    <string name="meditation_9">meditation_1</string>
    <string name="tab_name_audio">Audio</string>
    <string name="cur_play_audio">Current Play</string>
    <string name="all_audio">All Audio</string>
    <string name="click_audio_to_play">Click audio item to play</string>

</resources>
