<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/sleep_nature"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_music"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/sleep_music"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_nature"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/sleep_image"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>